@@ -1,0 +1,2 @@
+version file
+pearson_exotronics.version
