@@ -1,2 +1,2 @@
 name,id,tier,rarity,tech/manufacturer,tags,uiTags,base value,unlocked,hidden,hiddenEverywhere,cost_frigate,cost_dest,cost_cruiser,cost_capital,script,desc,short,sprite
-Test,PSE_test,0,,,"defensive, shields",Shields,3000,,,,3,6,9,15,data.scripts.hullmods.PSE_CommissionedCrewBonus,does thing,does thing,graphics/hullmods/accelerated_shields.png
+Composite Drone Armour,PSE_CommissionedCrewBonus,0,,,defensive,Special,3000,,,,0,0,0,0,data.scripts.hullmods.PSE_CommissionedCrewBonus,"Specialised PEC Navy trained technician crews improve the armour of unique Pearson-brand system drones by a flat %s units, while also improving ship armour by %s.",Strengthens ship and PEC-brand drone armour.,graphics/PSE/hullmods/PSE_CommissionBonus.png
