@@ -1,0 +1,11 @@
+{
+	"masterVersionFile":"https://bitbucket.org/MesoTroniK/mesotroniks-mods/downloads/tiandong.version",
+	"modName":"Tiandong Heavy Industries",
+	"modThreadId":9583,
+	"modVersion":
+	{
+		"major":1,
+		"minor":2,
+		"patch":1a
+	},
+}
